[gd_scene load_steps=7 format=3 uid="uid://8e15q3lh2a71"]

[ext_resource type="Script" path="res://scripts/duck/duck.gd" id="1_biaul"]
[ext_resource type="Script" path="res://scripts/duck/duck_brain.gd" id="2_skmmq"]
[ext_resource type="Script" path="res://scripts/duck/duck_interaction.gd" id="3_0euyc"]
[ext_resource type="Script" path="res://scripts/duck/duck_movement.gd" id="4_665th"]
[ext_resource type="PackedScene" uid="uid://dacb2afccms24" path="res://assets/models/lowpoly_duck_animated.glb" id="5_2loab"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cy2lh"]
size = Vector3(0.414551, 0.689329, 0.613281)

[node name="Duck" type="CharacterBody3D" groups=["ducks"]]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
collision_layer = 2
script = ExtResource("1_biaul")

[node name="DuckBrain" type="Node" parent="."]
script = ExtResource("2_skmmq")

[node name="DuckInteraction" type="Node" parent="." node_paths=PackedStringArray("brain")]
script = ExtResource("3_0euyc")
brain = NodePath("../DuckBrain")

[node name="DuckMovement" type="Node" parent="." node_paths=PackedStringArray("body", "animator")]
script = ExtResource("4_665th")
body = NodePath("..")
animator = NodePath("../DuckModelPlaceholder/AnimationPlayer")

[node name="DuckModelPlaceholder" parent="." instance=ExtResource("5_2loab")]

[node name="Skeleton3D" parent="DuckModelPlaceholder/Sketchfab_model/root/GLTF_SceneRootNode/Armature_11/GLTF_created_0" index="0"]
bones/2/rotation = Quaternion(-0.0291175, 2.38116e-07, -6.93627e-09, 0.999576)
bones/3/rotation = Quaternion(-0.406163, -0.0145252, -0.0204891, 0.913456)
bones/4/rotation = Quaternion(-0.0316575, -0.0111047, -0.0164102, 0.999302)
bones/6/rotation = Quaternion(0.941835, -0.0180807, 0.016926, -0.335161)
bones/7/rotation = Quaternion(-0.6311, -0.00995909, 0.00907467, 0.775585)
bones/8/rotation = Quaternion(0.663365, -0.0366768, 0.026204, 0.746937)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0124512, 0.348916, -0.0351562)
shape = SubResource("BoxShape3D_cy2lh")

[editable path="DuckModelPlaceholder"]
